--- a/src/index.html
+++ b/src/index.html
@@ -108,7 +108,7 @@
       </section>
 
       <section class="actual" id="actual">
-        <h3 class="actual__card-title">
+        <h3>
           Актуальні події
         </h3>
 
@@ -180,6 +180,53 @@
             </h4>
           </div>
         </div>
+      </section>
+
+      <section class="gallery">
+        <h3>
+          Галерея
+        </h3>
+
+        <img
+          src="../src/images/11.jpg"
+          alt="Йду і повертаюсь"
+          class="gallery__img"
+        >
+
+        <div class="gallery__next-prev">
+        <div class="gallery__next-prev-btn gallery__next-prev-btn--active"></div>
+        <div class="gallery__next-prev-btn"></div>
+        <div class="gallery__next-prev-btn"></div>
+        <div class="gallery__next-prev-btn"></div>
+        </div>
+      </section>
+
+      <section class="subscribe">
+        <h3 class="subscribe__title">
+          Підписка
+        </h3>
+
+        <p class="subscribe__description">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </p>
+
+        <form action="" class="subscribe__form">
+          <input
+            type="email"
+            name="email"
+            id="email"
+            placeholder="E-mail"
+            class="subscribe__email"
+          >
+          <label class="subscribe__submit-label">
+            <input
+              type="submit"
+              value=">"
+              class="subscribe__submit"
+            >
+            <img src="../src/images/tuda.svg" alt="Submit">
+          </label>
+        </form>
       </section>
 
     </div>
