--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,240 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
+    <script
+      type="module"
+      async
+      src="scripts/main.js">
+    </script>
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+    <header class="header">
+      <div class="header__menu">
+        <a href="/">
+          <img src="./images/Vector.png" alt="header__menu-opener">
+        </a>
+        <div class="header__menu-logo">
+          <a href="#">
+            <img src="./images/NA MU.png" alt="logo">
+          </a>
+        </div>
+      </div>
+      <h2 class="header__title">
+        ХУДОЖНІЙ
+        <br>
+        МУЗЕЙ
+      </h2>
+      <div class="header__button">
+        <div class="header__button-item">
+          кивтки
+        </div>
+        <a href="#" class="header__button-search">
+          >
+        </a>
+      </div>
+    </header>
+
+    <main>
+      <section class="page__section page__section-exhibition">
+        <h2 class="page__section-title">
+          Актуальні
+          <br>
+          події
+        </h2>
+        <div class="page__section-painting">
+          <img src="./images/painting1.png" alt="painting_nature">
+        </div>
+        <div class="page__section-description">
+          ВИСТАВКА
+        </div>
+        <div class="page__section-date">
+          26.08-29.11.2019
+        </div>
+        <div class="page__section-name">
+          Йду i повертаюсь
+          <img src="./images/orange.png" alt="ornge_square">
+        </div>
+        <div class="page__section-content">
+          Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+        </div>
+
+        <div class="page__section-painting">
+          <img src="./images/painting2.png" alt="painting_girl">
+        </div>
+        <div class="page__section-description">
+          ВИСТАВКА
+        </div>
+        <div class="page__section-date">
+          26.08-29.11.2019
+        </div>
+        <div class="page__section-name">
+          I спогади i мрії
+          <img src="./images/orange.png" alt="ornge_square">
+        </div>
+        <div class="page__section-content">
+          Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади i мрії».
+        </div>
+      </section>
+      <section class="page__section page__section-lection">
+        <img
+          src="./images/classicism.png"
+          alt="sunset"
+          class="page__section-sunset">
+        <div class="page__section-announcement">
+          <div class="page__section-description">
+            ЛЕКЦІЯ
+          </div>
+          <div class="page__section-date">26/08/2019 - 11:00</div>
+          <h2  class="page__section-name">
+            Від класицизму до
+            <br>
+            романтизму
+          </h2>
+        </div>
+      </section>
+
+      <section class="page__section page__section-gallery">
+        <h2 class="page__section-title">
+          Галерея
+        </h2>
+
+        <div class="swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <img src="./images/swipe1.png" alt="girl">
+            </div>
+            <div class="swiper-slide">
+              <img src="./images/swipe2.png" alt="village">
+            </div>
+            <div class="swiper-slide">
+              <img src="./images/swipe3.png" alt="park">
+            </div>
+            <div class="swiper-slide">
+              <img src="./images/swipe4.png" alt="sea">
+            </div>
+          </div>
+          <div class="swiper-pagination"></div>
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-button-next"></div>
+          <div class="swiper-scrollbar"></div>
+        </div>
+      </section>
+
+      <section class="subscribe">
+        <h2 class="subscribe__title">Підписка</h2>
+        <div class="subscribe__action">
+          Бути в курсі всіх актуальних
+          <br>
+          подій та останніх новин.
+        </div>
+        <div class="subscribe__button">
+          <label
+            for="email">
+          </label>
+          <input
+            type="email"
+            placeholder="E-mail"
+            name="email"
+            class="subscribe__button-text">
+          <a class="subscribe__button-search">></a>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="footer__logo">
+        <img src="./images/logo_footer.png" alt="logo">
+        <div class="footer__logo-links">
+          <a href="https://www.facebook.com/namu.museum/">
+            <img
+              src="./images/Facebook.png"
+              alt="facebook_link"
+              class="footer__logo-link">
+          </a>
+          <a href="https://www.instagram.com/namu.museum/">
+            <img
+              src="./images/insta.png"
+              alt="instagram_link"
+              class="footer__logo-link">
+          </a>
+        </div>
+      </div>
+      <div class="footer_schedule">
+        <div class="footer_schedule-times">
+          <h3>Графік роботи</h3>
+          <div>
+            <div>
+              12:00 — 20:00
+            </div>
+            <div>
+              середа
+            </div>
+            <div>
+              12:00 — 20:00
+            </div>
+            <div>
+              четвер
+            </div>
+            <div>
+              12:00 — 20:00
+            </div>
+            <div>
+              п’ятниця
+            </div>
+            <div>
+              11:00 — 19:00
+            </div>
+            <div>
+              субота
+            </div>
+            <div>
+              11:00 — 19:00
+            </div>
+            <div>
+              неділя
+            </div>
+            <div>
+              Вихідні понеділок, вівторок
+              <br>
+              Kaca припиняє роботу за 1 годину
+              <br>
+              до закриття музею
+            </div>
+          </div>
+        </div>
+
+        <div class="footer__schedule-contacts">
+          <h3>Контакти:</h3>
+          <div>
+            <a href="https://goo.gl/maps/7nr8PqBr3HogmNBo8" class="footer__schedule-link">
+              вул. M. Грушевського, 6; Київ, 01001
+            </a>
+            <a href="tel:+38 (044) 278-13-57" class="footer__schedule-link">
+              тел. +38 (044) 278-13-57
+            </a>
+            <a href="fax:+38 (044) 278-74-54" class="footer__schedule-link">
+              факс +38 (044) 278-74-54
+            </a>
+            <a href="mailto:info@namu.kiev.ua" class="footer__schedule-link">
+              e-mail: info@namu.kiev.ua
+            </a>
+          </div>
+        </div>
+      </div>
+      <div>
+        <a href="#">
+          <img
+          src="./images/Ellipse 4.png"
+          alt="go_to_the_top"
+          class="footer__return">
+        </a>
+      </div>
+    </footer>
   </body>
 </html>
