--- a/src/index.html
+++ b/src/index.html
@@ -218,13 +218,19 @@
             placeholder="E-mail"
             class="subscribe__email"
           >
+
           <label class="subscribe__submit-label">
             <input
               type="submit"
               value=">"
               class="subscribe__submit"
             >
-            <img src="../src/images/tuda.svg" alt="Submit">
+
+            <img
+              src="../src/images/tudaBlack.svg"
+              alt="Submit"
+              class="subscribe__img"
+            >
           </label>
         </form>
       </section>
