Add changes to form submit, menu color

--- a/src/index.html
+++ b/src/index.html
@@ -279,7 +279,9 @@
             </p>
 
             <form
-              action="#" class="subscription__block"
+              action="#"
+              class="subscription__block"
+              id="sub"
             >
               <input
                 class="subscription__input"
