--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Museum</title>
+    <title>NAMU</title>
+    <link
+      rel="shortcut icon"
+      type="image/png"
+      href="images/NA MUlogo.png"
+    >
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -35,13 +40,16 @@
           <div class="button__text">
             КВИТКИ
           </div>
-          <a href="#" class="button__field">
+          <a href="#events" class="button__field">
             <img
               src="images/arrow_right.png"
               alt="green buttom"
               class="button__action"
             >
           </a>
+        </div>
+        <div class="header__events">
+          ПОДІЇ
         </div>
       </div>
 
@@ -79,16 +87,18 @@
               </a>
             </li>
           </ul>
-          <a href="tel:+38 (044) 278-13-57" class="menu__contacts">
+          <div class="menu__contacts-wrapper">
+            <a href="tel:+38 (044) 278-13-57" class="menu__contacts">
               +38 (044) 278-13-57
-          </a>
-          <a
-            target="_blank"
-            href="https://goo.gl/maps/LTDT6eAoZaSezF8a6"
-            class="menu__contacts"
-          >
-              вул. М. Грушевського, 6; Київ
-          </a>
+            </a>
+            <a
+              target="_blank"
+              href="https://goo.gl/maps/LTDT6eAoZaSezF8a6"
+              class="menu__contacts"
+            >
+                вул. М. Грушевського, 6; Київ
+            </a>
+          </div>
         </div>
       </div>
     </nav>
@@ -239,24 +249,24 @@
           <div class="gallery__block-picture">
             <div class="grid gallery__block-picture--first">
               <img
-                class="grid__item--1-3 gallery__block-picture"
+                class="grid__item--1-3 gallery__picture"
                 src="images/photo/gallery_1.png"
                 alt="picture 1"
               >
               <img
-                class="grid__item--5-12  gallery__block-picture"
+                class="grid__item--5-12  gallery__picture"
                 src="images/photo/gallery_2.png"
                 alt="picture 2"
               >
             </div>
             <div class="grid gallery__block-picture--second">
               <img
-                class="grid__item--1-3 gallery__block-picture"
+                class="grid__item--1-3 gallery__picture"
                 src="images/photo/gallery_3.png"
                 alt="picture 3"
               >
               <img
-                class="grid__item--9-12  gallery__block-picture"
+                class="grid__item--9-12  gallery__picture"
                 src="images/photo/gallery_4.png"
                 alt="picture 4"
               >
@@ -275,16 +285,18 @@
           <p class="subscribe__subtitle">
             Бути в курсі всіх актуальних подій та останніх новин.
           </p>
-          <label class="subscribe__content">
-            <input
-              placeholder="Email"
-              class="subscribe__text"
-              type="email"
-            >
-            <button class="subscribe__button"></button>
-          </label>
-
-
+          <form action="#">
+            <label class="subscribe__content">
+              <input
+                name="email"
+                placeholder="Email"
+                class="subscribe__text"
+                type="email"
+                required
+              >
+              <button type="submit" class="subscribe__button"></button>
+            </label>
+          </form>
         </div>
       </section>
     </main>
@@ -358,17 +370,38 @@
               <h4 class="footer__title">
                 Контакти:
               </h4>
-              <p class="footer__text">
-                вул. М. Грушевського, 6;
+              <a
+                  target="_blank"
+                  href="https://goo.gl/maps/LTDT6eAoZaSezF8a6"
+                  class="footer__text footer__text-hover"
+                >
+                  вул. М. Грушевського, 6;
                 <br>
-                Київ, 01001
-                <br>
+                  Київ, 01001
+              </a>
+
+              <br>
+              <a
+                href="tel:+38 (044) 278-13-57"
+                class="footer__text footer__text-hover"
+              >
                 тел. +38 (044) 278-13-57
                 <br>
+              </a>
+              <a
+                href="tel:+38 (044) 278-74-54"
+                class="footer__text footer__text-hover"
+              >
                 факс +38 (044) 278-74-54
                 <br>
+              </a>
+              <a
+                href="e-mail: info@namu.kiev.ua"
+                class="footer__text footer__text-hover"
+              >
                 e-mail: info@namu.kiev.ua
-              </p>
+                <br>
+              </a>
             </div>
           </div>
           <div class="footer__arrow-up grid__item--2-2">
@@ -408,6 +441,22 @@
             </div>
           </div>
         </div>
+      </div>
+      <div class="namu">
+        <a
+          target="_blank"
+          href="https://www.behance.net/zhyriadatmar"
+          class="namu__designer"
+        >
+          Designed by Zhyriada Marina
+        </a>
+        <a
+          target="_blank"
+          href="https://www.legalzoom.com/articles/the-term-all-rights-reserved-explained#:~:text=This%20means%20that%20no%20one,permission%2C%20the%20statement%20is%20redundant."
+          class="namu__designer"
+        >
+          Copyright © 2019. All Rights Reserved.
+        </a>
       </div>
 
     </footer>
