--- a/src/index.html
+++ b/src/index.html
@@ -62,8 +62,268 @@
       </div>
     </header>
 
+    <main class="content">
+      <div class="content__events" id="events">
+        <p class="content__events--title">Актуальні події</p>
+        <div class="content__events--goAndComeBack">
+          <img
+            src="./images/photos/goAndComeAgain.jpg"
+            alt="go and come again photo"
+            class="content__events--goAndComeBack-photo"
+          >
+          <div class="content__events--goAndComeBack-links">
+            <a href="#events" class="link-one">Виставка</a>
+            <p class="date">
+              <strong> 26.08-29.11.2019 </strong>
+            </p>
+          </div>
 
+          <h1 class="content__events--goAndComeBack-title">
+            Йду і повертаюсь
+          </h1>
 
+          <p class="content__events--goAndComeBack-text">
+            Національний Художній Музей України презентує унікальну частину колекції Градобанку -
+            українське мистецтво другої половини 1980-1995 років.
+          </p>
+
+        </div>
+
+        <div class="content__events--memoriesAndDreams">
+          <img
+            src="./images/photos/memoriesAndDreams.jpg"
+            alt="memories and dreams photo"
+            class="content__events--memoriesAndDreams-photo"
+          >
+          <div class="content__events--memoriesAndDreams-links">
+            <a href="#events" class="link-one">Виставка</a>
+            <p class="date">
+              <strong> 26.08-29.11.2019 </strong>
+            </p>
+          </div>
+
+          <h1 class="content__events--memoriesAndDreams-title">
+            І спогади і мрії
+          </h1>
+
+          <p class="content__events--memoriesAndDreams-text">
+            Національний художній музей України до 100 річчя від дня народження видатної української художниці
+             Тетяни Яблонської відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+          </p>
+
+        </div>
+      </div>
+
+      <div class="content__toRomantic">
+        <div class="content__toRomantic--background"></div>
+        <div class="content__toRomantic--card">
+          <div class="content__toRomantic--card-links">
+            <a href="#events" class="link-one">
+              Лекція
+            </a>
+            <p class="date">
+              <strong>26/08/2019 - 11:00</strong>
+            </p>
+          </div>
+          <p class="content__toRomantic--card-text">
+            Від класицизму до романтизму
+          </p>
+        </div>
+      </div>
+
+      <div class="content__gallery--forDesktop">
+        <p class="content__gallery--text">
+          Галерея
+        </p>
+        <div class="content__gallery--forDesktop-first">
+          <img
+            src="./images/photos/gallery1.jpg"
+            alt="gallery photo"
+            class="content__gallery--forDesktop-foto1"
+          >
+          <img
+            src="./images/photos/gallery2.jpg"
+            alt="gallery photo"
+            class="content__gallery--forDesktop-foto2"
+          >
+        </div>
+        <div class="content__gallery--forDesktop-second">
+          <img
+            src="./images/photos/gallery3.jpg"
+            alt="gallery photo"
+            class="content__gallery--forDesktop-foto3"
+          >
+          <img
+            src="./images/photos/gallery4.jpg"
+            alt="gallery photo"
+            class="content__gallery--forDesktop-foto4"
+          >
+        </div>
+      </div>
+
+      <div class="content__gallery">
+        <p class="content__gallery--text">
+          Галерея
+        </p>
+        <div class="swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <img
+                src="./images/photos/gallery1.jpg"
+                alt="gallery photo"
+                class="content__gallery--photo"
+              >
+            </div>
+            <div class="swiper-slide">
+              <img
+                src="./images/photos/gallery2.jpg"
+                alt="gallery photo"
+                class="content__gallery--photo"
+              >
+            </div>
+            <div class="swiper-slide">
+              <img
+                src="./images/photos/gallery3.jpg"
+                alt="gallery photo"
+                class="content__gallery--photo"
+              >
+            </div>
+            <div class="swiper-slide">
+              <img
+                src="./images/photos/gallery4.jpg"
+                alt="gallery photo"
+                class="content__gallery--photo"
+              >
+            </div>
+
+            <div class="swiper-scrollbar"></div>
+          </div>
+        </div>
+      </div>
+
+      <div class="content__subscription">
+        <p class="content__subscription--title">
+          Підписка
+        </p>
+        <p class="content__subscription--text">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </p>
+        <div class="content__subscription--form">
+          <input
+            type="email"
+            placeholder="email"
+            class="content__subscription--form-input"
+          >
+          <button class="content__subscription--form-button">
+            <img src="./images/icons/Vector-for-button.png" alt="button icon">
+          </button>
+        </div>
+      </div>
+    </main>
+
+    <footer class="footer">
+      <div class="footer__icons">
+        <div class="footer__icons--logo">
+          <a href="#">
+            <img src="./images/icons/logo.png" alt="logo icon">
+          </a>
+        </div>
+        <div class="footer__icons--socialMedia">
+          <a href="https://www.facebook.com/namu.museum" class="footer__icons--socialMedia-facebook">
+            <img src="./images/icons/Facebook.png" alt="facebook icon">
+          </a>
+
+          <a href="https://www.instagram.com/namu.museum/" class="footer__icons--socialMedia-instagram">
+            <img src="./images/icons/instagram.png" alt="instagram icon">
+          </a>
+        </div>
+      </div>
+
+      <div class="footer__about">
+        <div class="footer__about--workTime">
+          <p class="footer__about--items">
+            Графік роботи <br>
+          </p>
+
+          <p>
+            <strong> 12:00— 20:00</strong> <br>
+             середа <br>
+            <strong> 12:00— 20:00 </strong> <br>
+            четвер <br>
+            <strong> 12:00 — 20:00 </strong> <br>
+            п’ятниця <br>
+            <strong> 11:00 — 19:00 </strong> <br>
+            субота <br>
+            <strong> 11:00 — 19:00 </strong> <br>
+            неділя <br> <br>
+
+            Вихідні понеділок,
+            <br> вівторок <br>
+            Каса припиняє <br>
+            роботу за 1 годину <br>
+            до закриття музею
+          </p>
+        </div>
+        <div class="footer__about--contacts">
+          <p class="footer__about--items">
+            Контакти:
+          </p>
+
+          <p>
+            вул. М. <br>
+            Грушевського, 6; <br>
+            Київ, 01001 <br>
+            тел. +38 (044) <br>
+            278-13-57 <br>
+            факс +38 (044) <br>
+            278-74-54 <br>
+            e-mail: <br>
+            info@namu.kiev.ua
+          </p>
+        </div>
+
+        <div class="footer__linkUp">
+          <a href="#">
+            <img
+              src="./images/icons/linkUpCircle.png"
+              alt="link up circle"
+              class="footer__linUp--circle"
+            >
+            <img
+              src="./images/icons/linkUpArrow.png"
+              alt="link up arrow"
+              class="footer__linkUp--arrow"
+            >
+          </a>
+        </div>
+
+      </div>
+
+      <div class="footer__hr">
+        <hr class="footer__hr--tag">
+      </div>
+
+      <div class="footer__nav">
+        <div class="footer__nav--column1">
+          <a href="#" class="footer__nav--firstLink">Галерея</a>
+          <a href="#" class="footer__nav--secondLink">Виставки та події</a>
+        </div>
+
+        <div class="footer__nav--column2">
+          <a href="#" class="footer__nav--firstLink">Про Нас</a>
+          <a href="#" class="footer__nav--secondLink">Контакти</a>
+        </div>
+      </div>
+
+      <div class="footer__copyright">
+        <p class="footer__copyright--designed">
+          Designed by Zhyriada Marina
+        </p>
+        <p>
+          Copyright © 2019. All Rights Reserved.
+        </p>
+      </div>
+    </footer>
 
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
