footer demo phone

--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
           grid__item--6-12">
           <a href="#" class="icon__link">
             <img
-              src="../src/images/logo.svg"
+              src="./images/logo.svg"
               alt="logo"
               class="icon__logo"
             >
@@ -69,18 +69,116 @@
       </div>
     </header>
 
-    <footer class="footer">
-      <div class="container grid">
-        <div class="footer__links-block">
-          <a href="#" class="icon__link">
-            <img
-              src="../src/images/logo.svg"
-              alt="logo"
-              class="icon__logo footer__logo"
-            >
-          </a>
+    <footer class="footer
+      page__footer"
+      >
+      <section  class="footer__info">
+        <div class="container grid__reset">
+          <div class="footer__links-block
+            grid__item--1-3 "
+          >
+            <a href="#">
+              <img
+                src="./images/logo.svg"
+                alt="logo"
+                class="icon__logo footer__logo"
+              >
+            </a>
+
+            <div>
+              <a href="#facebook">
+                <img src="./images/Facebook.svg" alt="Facebook">
+              </a>
+
+              <a href="#insta"
+                class="icon-gap"
+              >
+                <img src="./images/instagram.svg" alt="instagram">
+              </a>
+            </div>
+          </div>
         </div>
-      </div>
+
+        <div class="container grid grid__reset">
+          <div class="footer__schedule">
+            <h3>Графік роботи</h3>
+
+            <div class="footer__schedule-content">
+              12:00 — 20:00 середа
+              <br>
+              12:00 — 20:00 четвер
+              <br>
+              12:00 — 20:00 п’ятниця
+              <br>
+              11:00 — 19:00 субота
+              <br>
+              11:00 — 19:00 неділя
+              <p>
+                Вихідні понеділок,вівторок
+                <br>
+                Каса припиняє роботу за 1 годину
+                <br>
+                до закриття музею
+              </p>
+            </div>
+          </div>
+          <div class="footer__contacts">
+            <h3>Контакти:</h3>
+
+            <div class="footer__contacts-content">
+              <a href="https://goo.gl/maps/4wtr4Bjvh9mVvYeD7"
+                class="footer__link"
+              >
+                вул. М. Грушевського, 6; Київ, 01001
+              </a>
+              <br>
+              <a href="tel:+38 (044) 278-13-57"
+
+              >
+                  тел. +38 (044) 278-13-57
+              </a>
+              <br>
+              <a href="tel:+38 (044) 278-74-54"
+
+              >
+                факс +38 (044) 278-74-54
+              </a>
+              <br>
+              <a href="email:info@namu.kiev.ua"
+
+              >
+                e-mail: info@namu.kiev.ua
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <a href="#"  class="footer__arrow-up">
+          <img
+            src="./images/Arrow-up.svg"
+            alt="scrollUp"
+          >
+        </a>
+      </section>
+
+      <section class="footer__menu">
+        <div
+          class="container
+          grid
+          grid__reset"
+        >
+          <div>
+            <a href="#gallery">Галерея</a>
+            <a href="#events">Виставки та події</a>
+          </div>
+          <div>
+            <div>
+              <a href="#about">Про Нас</a>
+              <a href="#contacts">Контакти</a>
+            </div>
+          </div>
+        </div>
+      </section>
     </footer>
   </body>
 </html>
