--- a/src/index.html
+++ b/src/index.html
@@ -235,6 +235,74 @@
         </form>
       </section>
 
+      <section class="contacts">
+        <a href="#" class="contacts__logo">
+          <h1 class="contacts__title">
+            na<br>mu
+          </h1>
+        </a>
+
+        <div class="contacts__soc">
+          <img
+            src="../src/images/f.png"
+            alt="Facebook"
+            class="contacts__img"
+          >
+          <img
+            src="../src/images/insta.png"
+            alt="Instagam"
+            class="contacts__img"
+          >
+        </div>
+
+        <div class="contacts__plan">
+          <h5>
+            Графік роботи
+          </h5>
+
+          <p class="contacts__txt">
+            12:00 — 20:00 середа<br>12:00 — 20:00 четвер<br>12:00 — 20:00 п’ятниця<br>11:00 — 19:00 субота<br>11:00 — 19:00 неділя<br>Вихідні понеділок, вівторок<br>Каса припиняє роботу за 1 годину до закриття музею
+          </p>
+        </div>
+
+        <div class="contacts__info">
+          <h5>
+            Контакти:
+          </h5>
+
+          <p class="contacts__txt">
+            вул. М. Грушевського, 6; Київ, 01001<br>тел. +38 (044) 278-13-57<br>факс +38 (044) 278-74-54<br>e-mail: info@namu.kiev.ua
+          </p>
+        </div>
+
+        <div class="contacts__menu-min-part-1">
+          <p class="contacts__menu-min-txt">
+            Галерея
+          </p>
+          <p class="contacts__menu-min-txt">
+            Виставки та події
+          </p>
+        </div>
+
+        <div class="contacts__menu-min-part-2">
+          <p class="contacts__menu-min-txt">
+            Про Нас
+          </p>
+          <p class="contacts__menu-min-txt">
+            Контакти
+          </p>
+        </div>
+
+        <p class="contacts__author">
+          Designed by Zhyriada Marina
+        </p>
+
+        <p class="contacts__copiright">
+          Designed by Zhyriada Marina
+        </p>
+
+      </section>
+
     </div>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
