--- a/src/index.html
+++ b/src/index.html
@@ -261,7 +261,7 @@
           </h5>
 
           <p class="contacts__txt">
-            12:00 — 20:00 середа<br>12:00 — 20:00 четвер<br>12:00 — 20:00 п’ятниця<br>11:00 — 19:00 субота<br>11:00 — 19:00 неділя<br>Вихідні понеділок, вівторок<br>Каса припиняє роботу за 1 годину до закриття музею
+            <b>12:00 — 20:00</b> середа<br><b>12:00 — 20:00</b> четвер<br><b>12:00 — 20:00</b> п’ятниця<br><b>11:00 — 19:00</b> субота<br><b>11:00 — 19:00</b> неділя<br><br>Вихідні понеділок, вівторок<br>Каса припиняє роботу за 1 годину до закриття музею
           </p>
         </div>
 
@@ -274,6 +274,8 @@
             вул. М. Грушевського, 6; Київ, 01001<br>тел. +38 (044) 278-13-57<br>факс +38 (044) 278-74-54<br>e-mail: info@namu.kiev.ua
           </p>
         </div>
+
+        <div class="contacts__line"></div>
 
         <div class="contacts__menu-min-part-1">
           <p class="contacts__menu-min-txt">
