--- a/src/index.html
+++ b/src/index.html
@@ -183,7 +183,7 @@
       </section>
 
       <section class="gallery">
-        <h3>
+        <h3 class="gallery__title">
           Галерея
         </h3>
 
@@ -193,11 +193,35 @@
           class="gallery__img"
         >
 
+        <img
+          src="../src/images/22.jpg"
+          alt="Гуси Киріака Костанді"
+          class="gallery__img gallery__img--tab"
+        >
+
+        <img
+          src="../src/images/33.jpg"
+          alt="house"
+          class="gallery__img gallery__img--pc gallery__img--pc1"
+        >
+
+        <img
+          src="../src/images/44.jpg"
+          alt="boy"
+          class="gallery__img gallery__img--pc gallery__img--pc2"
+        >
+
+        <img
+          src="../src/images/55.jpg"
+          alt="sun"
+          class="gallery__img gallery__img--pc gallery__img--pc3"
+        >
+
         <div class="gallery__next-prev">
-        <div class="gallery__next-prev-btn gallery__next-prev-btn--active"></div>
-        <div class="gallery__next-prev-btn"></div>
-        <div class="gallery__next-prev-btn"></div>
-        <div class="gallery__next-prev-btn"></div>
+          <div class="gallery__next-prev-btn gallery__next-prev-btn--active"></div>
+          <div class="gallery__next-prev-btn"></div>
+          <div class="gallery__next-prev-btn"></div>
+          <div class="gallery__next-prev-btn"></div>
         </div>
       </section>
 
@@ -304,7 +328,6 @@
         </p>
 
       </section>
-
     </div>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
