--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body class="page__body page__body--with-menu">
+  <body class="page__body">
     <header class="header">
       <div class="header__title-block">
         <a href="#menu" class="header__menu header__menu--tablet">
