fixed all from comments

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Museum</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <script src="./scripts/main.js"></script>
   </head>
   <body>
     <header id="header" class="header">
@@ -24,7 +29,7 @@
         <div class="header__form-description form__description">
           квитки
         </div>
-        <div class="header__form-button button"></div>
+        <a href="#subscription" class="header__form-button button"></a>
       </div>
       <div class="header__optional">ПОДІЇ</div>
     </header>
@@ -192,8 +197,9 @@
             type="text"
             class="form-input"
             placeholder="E-mail"
+            required
           >
-          <div class="subscription__form-button button button--red"></div>
+          <input type="reset" class="subscription__form-button button button--red" value="">
         </form>
       </section>
 
@@ -238,10 +244,37 @@
               Контакти
             </div>
             <div class="info__description-contacts-names">
-              вул. М. Грушевського, 6; Київ, 01001
-              тел. +38 (044) 278-13-57
-              факс +38 (044) 278-74-54
-              e-mail: info@namu.kiev.ua
+              <a
+                class="info__description-contacts-link"
+                href="https://goo.gl/maps/6PnfvM83bgLZH65f8"
+                target="_blank"
+              >
+                вул. М. Грушевського, 6; Київ, 01001
+              </a>
+              <br>
+              <a
+              class="info__description-contacts-link"
+              href="tel:+38044781357"
+              target="_blank"
+              >
+                тел. +38 (044) 278-13-57
+              </a>
+              <br>
+              <a
+              class="info__description-contacts-link"
+              href="fax:+380442787454"
+              target="_blank"
+              >
+                факс +38 (044) 278-74-54
+              </a>
+              <br>
+              <a
+                class="info__description-contacts-link"
+                href="mailto:info@namu.kiev.ua"
+                target="_blank"
+              >
+                e-mail: info@namu.kiev.ua
+              </a>
             </div>
           </div>
           <a class="arrow" href="#header">
