improved menu, form and current-events

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   </head>
-  <body>
+  <body class="page__body">
     <header class="page__header header">
       <div class="container">
         <section class="header__top">
@@ -44,7 +44,7 @@
           <a href="#" class="menu__icon-cross"></a>
           <a href="#" class="menu__logo logo">
             <img
-              src="./images/NA MU.svg"
+              src="./images/gallery/NA MU_menu.svg"
               alt="ХУДОЖНІЙ МУЗЕЙ"
               class="logo__item"
             >
@@ -236,6 +236,7 @@
                   class="subscription__form-input"
                   name="email"
                   placeholder="E-mail"
+                  id="subscription"
                   required
                 >
                 <button
@@ -344,7 +345,6 @@
                 <a
                   href="email:info@namu.kiev.ua"
                   class="contacts__item"
-                  target="_blank"
                 >
                   e-mail: info@namu.kiev.ua
                 </a>
