--- a/src/index.html
+++ b/src/index.html
@@ -324,7 +324,7 @@
         </p>
 
         <p class="contacts__copiright">
-          Designed by Zhyriada Marina
+          Copyright © 2019. All Rights Reserved.
         </p>
 
       </section>
