--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NAMU Landing</title>
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./images/icons/logo.png"
+    >
     <link rel="stylesheet" href="./styles/main.scss">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -21,7 +26,10 @@
   <body>
     <header class="header">
       <div class="header__icons">
-        <a href="#" class="header__icons--burger">
+        <a
+          href="#"
+          class="header__icons--burger"
+        >
           <img
             src="./images/icons/burger.png"
             alt="burger icon"
@@ -229,11 +237,19 @@
           </a>
         </div>
         <div class="footer__icons--socialMedia">
-          <a href="https://www.facebook.com/namu.museum" class="footer__icons--socialMedia-facebook">
+          <a
+            href="https://www.facebook.com/namu.museum"
+            class="footer__icons--socialMedia-facebook"
+            target="_blank"
+          >
             <img src="./images/icons/Facebook.png" alt="facebook icon">
           </a>
 
-          <a href="https://www.instagram.com/namu.museum/" class="footer__icons--socialMedia-instagram">
+          <a
+            href="https://www.instagram.com/namu.museum/"
+            class="footer__icons--socialMedia-instagram"
+            target="_blank"
+            >
             <img src="./images/icons/instagram.png" alt="instagram icon">
           </a>
         </div>
