added links for fb and insta

--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Museum</title>
     <link rel="stylesheet" href="./styles/main.scss">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/apple-touch-icon.png"
+    >
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/favicon-32x32.png"
+    >
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/favicon-16x16.png"
+    >
     <link rel="manifest" href="/site.webmanifest">
     <script src="./scripts/main.js"></script>
   </head>
@@ -199,7 +213,11 @@
             placeholder="E-mail"
             required
           >
-          <input type="reset" class="subscription__form-button button button--red" value="">
+          <input
+            type="reset"
+            class="subscription__form-button button button--red"
+            value=" "
+          >
         </form>
       </section>
 
@@ -209,16 +227,20 @@
             na <br> mu
           </h1>
           <div class="info__emblems-logos">
-            <img
-              src="./images/Facebook.png"
-              alt="facebook"
-              class="info__logos-image info__logos-image--fb"
-            >
-            <img
-              src="./images/Insta.png"
-              alt="instagram"
-              class="info__logos-image"
-            >
+            <a href="https://www.facebook.com/namu.museum/" target="_blank">
+              <img
+                src="./images/Facebook.png"
+                alt="facebook"
+                class="info__logos-image info__logos-image--fb"
+              >
+            </a>
+            <a href="https://www.instagram.com/namu.museum/" target="_blank">
+              <img
+                src="./images/Insta.png"
+                alt="instagram"
+                class="info__logos-image"
+              >
+            </a>
           </div>
         </div>
         <div class="info__description">
