--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,11 @@
     <link rel="stylesheet" href="./styles/main.scss">
     <script type="text/javascript" src="scripts/main.js"></script>
   </head>
-  <body>
+  <body class="page">
 
-    <header class="header">
-      <div class="container">
+    <header class="header header--margin">
+      <div class="container container--pos">
+
         <div class="header__bg grid grid--desktop">
           <div class="header__bg--img grid__item-tab--4-6 grid__item-desk--6-12"></div>
         </div>
@@ -29,7 +30,7 @@
         </div>
         <div class="grid grid--desktop">
           <div class="header__content grid__item-tab--1-3 grid__item-desk--1-5">
-            <h1 class="header__title">
+            <h1 class="page__title">
               ХУДОЖНІЙ МУЗЕЙ
             </h1>
 
@@ -44,6 +45,14 @@
 
           </div>
         </div>
+
+
+
+        <a href="#event" class="header-event-link">
+          <div class="header-event-link__line"></div>
+          <div class="header-event-link__text">ПОДІЇ</div>
+        </a>
+
       </div>
     </header>
 
@@ -83,8 +92,102 @@
       </div>
     </nav>
 
-    <main></main>
+    <main>
+      <section class="event" id="event">
+        <div class="container grid grid--desktop">
+          <h2 class="event__title page__title--h2 grid__item-tab--1-4 grid__item-desk--1-5">
+            Актуальні події
+          </h2>
+        </div>
 
-    <footer></footer>
+        <div class="event-exhibition event-exhibition--margin container grid grid--desktop">
+          <img
+            class="grid__item-tab--1-6 grid__item-desk--1-7 event-exhibition__poster"
+            src="./images/exhb1.png"
+            alt="picture 1"
+          >
+
+          <div class="event-exhibition-description grid__item-tab--1-4 grid__item-desk--9-12">
+            <div class="event-exhibition-description__date">
+              <div>ВИСТАВКА</div>
+              <div class="event-exhibition-description__date--bold">26.08-29.11.2019</div>
+            </div>
+
+            <div class="event-exhibition-description__title">
+              <h3 class="page__title--h3">Йду і повертаюсь</h3>
+              <div class="sqr"></div>
+            </div>
+
+            <div class="event-exhibition-description__content">
+              Національний Художній Музей України презентує
+              унікальну частину колекції Градобанку -
+              українське мистецтво другої половини 1980-1995 років.
+            </div>
+
+          </div>
+        </div>
+
+        <div class="event-exhibition event-exhibition--margin container grid grid--desktop">
+          <img
+            class="grid__item-tab--1-6 grid__item-desk--1-7 event-exhibition__poster"
+            src="./images/exhb2.png"
+            alt="picture 1"
+          >
+
+          <div class="event-exhibition-description grid__item-tab--1-4 grid__item-desk--9-12">
+            <div class="event-exhibition-description__date">
+              <div>ВИСТАВКА</div>
+              <div class="event-exhibition-description__date--bold">26.08-29.11.2019</div>
+            </div>
+
+            <div class="event-exhibition-description__title">
+              <h3 class="page__title--h3">І спогади і мрії</h3>
+              <div class="sqr"></div>
+            </div>
+
+            <div class="event-exhibition-description__content">
+              Національний художній музей України до 100 річчя
+              від дня народження   видатної української художниці
+              Тетяни Яблонської  відкриває ретроспективну
+              ювілейну виставку «І спогади і мрії».
+            </div>
+
+          </div>
+        </div>
+
+        <div class="lecture-exhibition container-outside">
+          <img
+            class="lecture-exhibition__img"
+            src="./images/exhb3.png"
+            alt="picture 3"
+          >
+
+
+          <div class="container grid grid--desktop">
+            <div class="lecture-exhibition__description grid__item-tab--2-5 grid__item-desk--4-9">
+              <div class="event-exhibition-description__date event-exhibition-description__date--lecture">
+                <div>ЛЕКЦІЯ</div>
+                <div class="event-exhibition-description__date--bold">26/08/2019 - 11:00</div>
+              </div>
+              <div class="event-exhibition-description__title event-exhibition-description__title--lecture">
+                <h3 class="page__title--h3">Від класицизму до романтизму</h3>
+              </div>
+            </div>
+          </div>
+
+
+        </div>
+
+      </section>
+
+      <section class="gallery"></section>
+
+      <section class="subscribe">
+
+      </section>
+    </main>
+
+    <footer>
+    </footer>
   </body>
 </html>
