delited link to google from logo

--- a/src/index.html
+++ b/src/index.html
@@ -47,9 +47,8 @@
           >
         </a>
         <a
-          href="https://goo.gl/maps/Q3KLWrF6TX255TT39"
+          href="#"
           class="logo"
-          target="_blank"
         >
           <img
             src="images/NA MU.png"
@@ -73,9 +72,8 @@
               >
             </a>
             <a
-              href="https://goo.gl/maps/Q3KLWrF6TX255TT39"
+              href="#"
               class="logo logo--menu"
-              target="_blank"
             >
               <img
                 src="images/NA MU.png"
@@ -318,9 +316,8 @@
         <div class="footer">
           <div class="footer__social">
             <a
-              href="https://goo.gl/maps/Q3KLWrF6TX255TT39"
+              href="#"
               class="footer__logo"
-              target="_blank"
               >
               <img src="images/NA MU.png" alt="logo">
             </a>
