--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" class="page">
+
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,175 +11,186 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;700&display=swap"
-      rel="stylesheet"
-    >
+      rel="stylesheet">
 
     <script type="module" src="scripts/main.js"></script>
 
   </head>
+
   <body class="page__body">
-    <header class="header page__section">
-      <div class="container grid container--reverse">
+    <header class="header">
+      <div class="header__container">
+        <a href="#menu" class="header__menu header__menu--tablet">
+          <img src="./images/menu.svg" alt="menu">
+        </a>
 
-        <div class="top-actions--content">
-          <a href="#menu" class="icon icon__menu"></a>
-        </div>
+        <h1 class="header__title">
+          ХУДОЖНІЙ
+          <br>
+          МУЗЕЙ
+        </h1>
 
-        <div
-          class="header__content-container
-          grid__item
-          grid__item--1-5
-          page__header"
-        >
-
-          <h1 class="header__title
-            page__title"
-          >
-            ХУДОЖНІЙ
-            <br>
-            МУЗЕЙ
-          </h1>
-          <div
-            class="ticket__frame
-            page__ticket-button"
-          >
-            <div
-              class="ticket__title"
-            >
-              КВИТКИ
-            </div>
-            <div class="ticket__button">
-              <img src="./images/arrow-button.svg" alt="ticket-button">
-            </div>
+        <div class="ticket__frame
+            page__ticket-button">
+          <div class="ticket__title">
+            КВИТКИ
+          </div>
+          <div class="ticket__button">
+            <img src="./images/arrow-button.svg" alt="ticket-button">
           </div>
         </div>
 
-        <div
-          class="header__image-container
-          grid__item
-          grid__item--6-12">
-          <a href="#" class="icon__link">
-            <img
-              src="./images/logo.svg"
-              alt="logo"
-              class="icon__logo"
-            >
-          </a>
-        </div>
-
+        <p class="header__item">
+          події
+        </p>
       </div>
+
+      <div class="header__image-container">
+        <a href="#menu" class="header__menu">
+          <img src="./images/menu.svg"
+            alt="menu"
+            class="header__menu-icon"
+          >
+        </a>
+        <a href="#" class="logo">
+          <img src="./images/logo.svg"
+          alt="logo"
+          class="logo__img"
+        >
+        </a>
+      </div>
+
     </header>
 
-    <footer class="footer
-      page__footer"
-      >
-      <section  class="footer__info">
-        <div class="container grid__reset">
-          <div class="footer__links-block
-            grid__item--1-3 "
-          >
-            <a href="#">
-              <img
-                src="./images/logo.svg"
-                alt="logo"
-                class="icon__logo footer__logo"
+    <footer>
+      <section class="sign-up" id="sign-up">
+        <h3 class="sign-up__title">
+          Підписка
+        </h3>
+        <p class="sign-up__subtitle">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </p>
+
+        <div class="sign-up__input">
+          <form action="#" class="sign-up__form">
+            <label for="email">
+              <input
+                type="email"
+                name="email"
+                id="email"
+                placeholder="E-mail"
+                required
+                class="sign-up__email"
               >
+            </label>
+
+            <button type="submit" class="sign-up__lable">
+              <img
+                src="images/black-arrow.svg"
+                class="sign-up__arrow-img"
+                alt="img"
+              >
+            </button>
+          </form>
+        </div>
+      </section>
+      <div class="container">
+        <section class="footer">
+
+          <div class="footer__links-block">
+            <a href="https://goo.gl/maps/Q3KLWrF6TX255TT39" class="footer__logo">
+              <img src="./images/logo.svg" alt="logo">
             </a>
 
-            <div>
-              <a href="#facebook">
-                <img src="./images/Facebook.svg" alt="Facebook">
-              </a>
-
-              <a href="#insta"
-                class="icon-gap"
+            <div class="footer__logos">
+              <a href="https://www.facebook.com/namu.museum/"
+                class="footer__logo"
               >
-                <img src="./images/instagram.svg" alt="instagram">
+                <img src="./images/Facebook.svg"
+                  alt="Facebook"
+                  class="footer__img"
+                  >
+              </a>
+
+              <a href="https://www.instagram.com/namu.museum/" class="footer__instagram">
+                <img src="./images/instagram.svg"
+                alt="instagram"
+                class="footer__img">
               </a>
             </div>
           </div>
-        </div>
 
-        <div class="container grid grid__reset">
           <div class="footer__schedule">
-            <h3>Графік роботи</h3>
+            <p>Графік роботи</p>
 
-            <div class="footer__schedule-content">
-              12:00 — 20:00 середа
-              <br>
-              12:00 — 20:00 четвер
-              <br>
-              12:00 — 20:00 п’ятниця
-              <br>
-              11:00 — 19:00 субота
-              <br>
-              11:00 — 19:00 неділя
-              <p>
-                Вихідні понеділок,вівторок
-                <br>
-                Каса припиняє роботу за 1 годину
-                <br>
-                до закриття музею
-              </p>
-            </div>
+            <p><strong>12:00 — 20:00</strong> середа</p>
+            <p><strong>12:00 — 20:00</strong> четвер</p>
+            <p><strong>12:00 — 20:00</strong> п’ятниця</p>
+            <p><strong>11:00 — 19:00</strong> субота</p>
+            <p><strong>11:00 — 19:00</strong> неділя</p>
+
           </div>
-          <div class="footer__contacts">
-            <h3>Контакти:</h3>
+
+          <p class="footer__information">
+            Вихідні понеділок,вівторок
+            Каса припиняє роботу за 1 годину
+            до закриття музею
+          </p>
+
+          <div class="footer__contacts" id="contacts">
+            <p>Контакти:</p>
 
             <div class="footer__contacts-content">
-              <a href="https://goo.gl/maps/4wtr4Bjvh9mVvYeD7"
-                class="footer__link"
-              >
+              <a href="https://goo.gl/maps/4wtr4Bjvh9mVvYeD7" class="footer__link">
                 вул. М. Грушевського, 6; Київ, 01001
               </a>
               <br>
               <a href="tel:+38 (044) 278-13-57"
-
-              >
-                  тел. +38 (044) 278-13-57
+              class="footer__link">
+                тел. +38 (044) 278-13-57
               </a>
               <br>
               <a href="tel:+38 (044) 278-74-54"
-
-              >
+              class="footer__link">
                 факс +38 (044) 278-74-54
               </a>
               <br>
               <a href="email:info@namu.kiev.ua"
-
-              >
+              class="footer__link">
                 e-mail: info@namu.kiev.ua
               </a>
             </div>
           </div>
-        </div>
 
-        <a href="#"  class="footer__arrow-up">
-          <img
-            src="./images/Arrow-up.svg"
-            alt="scrollUp"
-          >
-        </a>
-      </section>
+          <a href="#" class="footer__arrow-up">
+            <img src="./images/Arrow-up.svg" alt="up-button">
+          </a>
 
-      <section class="footer__menu">
-        <div
-          class="container
-          grid
-          grid__reset"
-        >
-          <div>
-            <a href="#gallery">Галерея</a>
-            <a href="#events">Виставки та події</a>
+          <div class="footer__horizontal-line"></div>
+
+          <div class="footer__links-block-1">
+            <a href="#galery" class="footer__link">
+              Галерея
+            </a>
+
+            <a href="#events" class="footer__link">
+              Виставки та події
+            </a>
           </div>
-          <div>
-            <div>
-              <a href="#about">Про Нас</a>
-              <a href="#contacts">Контакти</a>
-            </div>
+
+          <div class="footer__links-block-2">
+            <a href="#sign-up" class="footer__link">
+              Про Нас
+            </a>
+
+            <a href="#contacts" class="footer__link">
+              Контакти
+            </a>
           </div>
-        </div>
-      </section>
+
+        </section>
+      </div>
     </footer>
   </body>
+
 </html>
