--- a/src/index.html
+++ b/src/index.html
@@ -78,7 +78,7 @@
           </li>
 
           <li class="nav-list__item">
-            <a href="#" class="nav-list__link">
+            <a href="#subscribe" class="nav-list__link">
             Про Нас
             </a>
           </li>
@@ -93,7 +93,7 @@
     </nav>
 
     <main>
-      <section class="event" id="event">
+      <section class="event event--margin" id="event">
         <div class="container grid grid--desktop">
           <h2 class="event__title page__title--h2 grid__item-tab--1-4 grid__item-desk--1-5">
             Актуальні події
@@ -182,8 +182,35 @@
 
       <section class="gallery"></section>
 
-      <section class="subscribe">
+      <section class="container-outside subscribe-bg" id="subscribe">
+        <div class="container grid grid--desktop">
+          <div class="subscribe grid__item-tab--2-5 grid__item-desk--4-9">
+            <div>
+              <h2 class="page__title--h2 subscribe__title">
+                Підписка
+              </h2>
+              <div class="subscribe__content">
+                Бути в курсі всіх актуальних подій та останніх новин.
+              </div>
+            </div>
 
+            <form class="subscribe__form">
+              <input
+                class="subscribe__input"
+                type="email"
+                name="email"
+                id="email"
+                placeholder="E-mail"
+              >
+              <button
+                type="submit"
+                class="subscribe__button"
+              >
+                <span class="subscribe__arrow"></span>
+              </button>
+            </form>
+          </div>
+        </div>
       </section>
     </main>
 
