--- a/src/index.html
+++ b/src/index.html
@@ -308,7 +308,7 @@
             <a href="#" class="footer__icon">
               <img
                 class="footer__logo"
-                src="images/NA MUlogo.png"
+                src="images/NA MU.png"
                 alt="logo"
               >
             </a>
