--- a/src/index.html
+++ b/src/index.html
@@ -341,7 +341,7 @@
         <div class="grid grid__item grid--desktop-footer">
           <div class="wrapper grid__item--1-1 grid__item--tablet-2-3 grid__item--desktop-3-4">
             <div class="footer__block-text">
-              <h4 class="footer__title">
+              <h4 class="footer__text">
                 Графік роботи
               </h4>
               <p class="footer__text">
@@ -367,7 +367,7 @@
           </div>
           <div class="grid__item--tablet-4-5 grid__item--2-2 grid__item--desktop-5-6">
             <div class="footer__block-text">
-              <h4 class="footer__title">
+              <h4 class="footer__text">
                 Контакти:
               </h4>
               <a
