museum header alpha version

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,97 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+  <body class="page__body">
+    <header class="page__section header">
+      <div class="container">
+
+        <section class="header__top">
+          <a
+            class="icon icon--menu"
+            href="#menu"
+          ></a>
+
+          <a href="#" class="logo">
+            <img
+              class="logo__image"
+              src="images/logo.svg"
+              alt="NAMU"
+            >
+          </a>
+        </section>
+
+        <section class="header__content">
+
+          <h1 class="header__title">
+            ХУДОЖНІЙ <br> МУЗЕЙ
+          </h1>
+
+          <button class="button">
+            КВИТКИ
+          </button>
+
+        </section>
+      </div>
+    </header>
+
+    <div class="page__menu menu" id="menu">
+      <div class="container">
+        <div class="menu__content">
+          <div class="menu__top">
+            <a
+              class="icon icon--cross"
+              href="#"
+            ></a>
+
+            <a href="#" class="logo">
+              <img
+                class="logo__image"
+                src="images/logo.svg"
+                alt="NAMU"
+              >
+            </a>
+          </div>
+
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a href="#" class="menu__link">
+                Художній Музей
+              </a>
+            </li>
+
+            <li class="menu__item">
+              <a href="#" class="menu__link">
+                Актуальні події
+              </a>
+            </li>
+
+            <li class="menu__item">
+              <a href="#" class="menu__link">
+                Галерея
+              </a>
+            </li>
+
+            <li class="menu__item">
+              <a href="#" class="menu__link">
+                Підписка
+              </a>
+            </li>
+
+        </div>
+      </div>
+    </div>
+
+    <main class="main">
+
+    </main>
+
   </body>
 </html>
