ready fo the production

--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
 
     <main>
       <section class="page__section" id="events">
-        <div class="events__container container">
+        <div class="events__container">
           <h2 class="events__title">Актуальні події</h2>
 
           <div class="events__item event">
@@ -334,9 +334,9 @@
             </div>
           </div>
 
-          <div class="footer__copyright copiright">
-            <p class="copiright__name">Designed by Zhyriada Marina</p>
-            <p class="copiright__name">Copyright © 2019. All Rights Reserved.</p>
+          <div class="footer__copyright copyright">
+            <p class="copyright__name">Designed by Zhyriada Marina</p>
+            <p class="copyright__name">Copyright © 2019. All Rights Reserved.</p>
           </div>
         </div>
       </div>
