--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
       >
 
       <nav class="nav">
+
         <div class="nav__opener">
           <label for="checkbox">
             <img
@@ -49,7 +50,7 @@
             class="nav__menu-item"
             alt="Виставки та події"
           >
-            <li><p class="p--menu2">Виставки та події</p></li>
+            <li><p class="p--menu">Виставки та події</p></li>
           </a>
 
           <a
@@ -57,7 +58,7 @@
             class="nav__menu-item"
             alt="Галерея"
           >
-            <li><p class="p--menu3">Галерея</p></li>
+            <li><p class="p--menu">Галерея</p></li>
           </a>
 
           <a
@@ -66,7 +67,7 @@
             alt="Про Нас"
             target="_blank"
           >
-            <li><p class="p--menu4">Про Нас</p></li>
+            <li><p class="p--menu">Про Нас</p></li>
           </a>
 
           <a
@@ -74,7 +75,7 @@
             class="nav__menu-item"
             alt="Контакти"
           >
-            <li><p class="p--menu5">Контакти</p></li>
+            <li><p class="p--menu">Контакти</p></li>
           </a>
         </ul>
       </nav>
@@ -239,6 +240,7 @@
           action="https://mate-academy-form-lesson.herokuapp.com/create-application"
           method="post"
           class="subscribe__form"
+          id="huidi"
         >
           <input
             type="email"
@@ -252,8 +254,7 @@
 
           <label class="subscribe__submit-label">
             <input
-              type="reset"
-              value="Reset"
+              type="submit"
               class="subscribe__submit"
             >
 
