--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
             grid__item--on320-1-1
             grid__item--on768-1-1
           ">
-            <a class="header__menu-opener" href="#"></a>
+            <a class="icon icon--menu-opener" href="#headerMenu"></a>
           </div>
           <div class="
             grid__item
@@ -65,6 +65,55 @@
         </div>
       </div>
     </header>
+    <nav class="page__menu menu" id="headerMenu">
+      <div class="container">
+        <div class="menu__content">
+          <div class="grid">
+            <div class="
+            grid__item
+            grid__item--on320-1-1
+            grid__item--on768-1-1
+          ">
+              <a class="icon icon--menu-cross" href="#"></a>
+            </div>
+            <div class="
+              grid__item
+              grid__item--on768-4-5
+              grid__item--on1280-6-7
+              header__logo-wrapper
+            ">
+              <a class="logo header__logo" href="#">
+                <img
+                  class="logo__img logo__img--header"
+                  src="images/na-mu-logo.svg"
+                  alt="Museum logo"
+                >
+              </a>
+            </div>
+          </div>
+          <ul class="menu__nav-list">
+            <li class="menu__nav-item">
+              <a class="menu__nav-link" href="#events">Квитки</a>
+            </li>
+            <li class="menu__nav-item">
+              <a class="menu__nav-link" href="#events">Актуальні події</a>
+            </li>
+            <li class="menu__nav-item">
+              <a class="menu__nav-link" href="#gallery">Галерея</a>
+            </li>
+            <li class="menu__nav-item">
+              <a class="menu__nav-link" href="#subscription">Підписатись на новини</a>
+            </li>
+            <li class="menu__nav-item">
+              <a class="menu__nav-link" href="#subscription">Про нас</a>
+            </li>
+            <li class="menu__nav-item">
+              <a class="menu__nav-link" href="#contacts">Контакти</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <main>
       <section class="page__section-current-events" id="events">
         <div class="container">
@@ -235,7 +284,7 @@
                   placeholder="E-mail"
                   required
                 >
-                <button class="form__button"></button>
+                <button class="form__button" id="formSubmit"></button>
               </form>
             </div>
           </div>
@@ -301,7 +350,7 @@
             grid__item--on768-4-5
             grid__item--on1280-5-6
           ">
-            <div class="footer__contacts">
+            <div class="footer__contacts" id="contacts">
               <div class="footer__contacts-title">Контакти:</div>
               <p class="footer__contacts-text">
                 <a
@@ -359,7 +408,7 @@
             grid__item--on1280-10-11
           ">
             <a class="footer__menu-item" href="#subscription">Про Нас</a>
-            <a class="footer__menu-item" href="#">Контакти</a>
+            <a class="footer__menu-item" href="#contacts">Контакти</a>
           </div>
         </div>
         <div class="footer__design-and-copyright">
